[gd_scene load_steps=10 format=2]

[ext_resource path="res://Color Sorting/Game/Gamefield.gd" type="Script" id=1]
[ext_resource path="res://UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Color Sorting/Game/white_bg 2000x2000.png" type="Texture" id=3]
[ext_resource path="res://Color Sorting/Game/End_Game_UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Color Sorting/Game/Mid_Game_UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Color Sorting/Game/Custom.tscn" type="PackedScene" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.86413, 1 ), -0.0448056, -0.0448056, 0, 0, Vector2( 1, 0 ), -3.48485, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 66.25
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 24.41
gravity = Vector3( 0, 450, 0 )
initial_velocity = 643.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 26.47
angle = 367.1
angle_random = 1.0
scale = 7.0
scale_curve = SubResource( 2 )
color = Color( 0, 0.0666667, 1, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Gamefield" type="Node2D"]
script = ExtResource( 1 )

[node name="WhiteBg2000X2000" type="Sprite" parent="."]
position = Vector2( 408, 568 )
texture = ExtResource( 3 )

[node name="Tiles" type="Node2D" parent="."]

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="End_Game" type="CanvasLayer" parent="."]

[node name="End_Game_UI" parent="End_Game" instance=ExtResource( 4 )]

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 377, 480 )
emitting = false
amount = 400
lifetime = 2.5
one_shot = true
explosiveness = 0.33
process_material = SubResource( 3 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MarginContainer" parent="GUI" instance=ExtResource( 5 )]

[node name="CustomUI" type="CanvasLayer" parent="."]

[node name="CustomUI" parent="CustomUI" instance=ExtResource( 6 )]

[connection signal="pressed" from="UI/UI/CenterContainer/VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="UI/UI/CenterContainer/VBoxContainer/Moderate" to="." method="_on_Moderate_pressed"]
[connection signal="pressed" from="UI/UI/CenterContainer/VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="UI/UI/CenterContainer/VBoxContainer/Extrem" to="." method="_on_Extrem_pressed"]
[connection signal="pressed" from="UI/UI/CenterContainer/VBoxContainer/Custom" to="." method="_on_Custom_pressed"]
[connection signal="pressed" from="End_Game/End_Game_UI/CenterContainer/VBoxContainer/Next_Level/Next Level" to="." method="_on_Next_Level_pressed"]
[connection signal="pressed" from="End_Game/End_Game_UI/CenterContainer/VBoxContainer/Difficulty/Change_Difficultie" to="." method="_on_Change_Difficultie_pressed"]
[connection signal="pressed" from="End_Game/End_Game_UI/CenterContainer/VBoxContainer/Change_Game/Game_Selection" to="." method="_on_Game_Selection_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/BackToModes" to="." method="_on_BackToModes_pressed"]

[editable path="UI"]
[editable path="UI/UI"]
[editable path="End_Game/End_Game_UI"]
[editable path="GUI/MarginContainer"]
[editable path="CustomUI/CustomUI"]
